  pseudo-instructions so that it does not need to be re-done in
  cchecklink.  Updated the cchecklink validator accordingly.

- Language features: support "switch" statements over an argument of
  type "long long".

- Value analysis and constant propagation: more precise treatment of
  comparisons against an integer constant.

- Language features: support C99 compound literals.


Release 2.3pl2, 2014-05-15
==========================

Usability:
- Re-added support for "__func__" identifier as per ISO C99.
- Re-added some popular GCC extensions to ISO C99:
     . alternate keywords __restrict, __inline__, etc, 
     . support for empty structs and unions
     . support '\e' escape in char and string literals, meaning ESC
- Do not assume that the preprocessor removed all comments.

Bug fixing:
- Fixed regression on initializers of the form  T x[N] = "literal";
  where T is a typedef for a character type.
- "asm" statements were causing syntax errors.
- Better handling of "extern" and "extern inline" function definitions.
- Internal error on some octal escape sequences in string literals.
- Parsing of "#pragma section" directives made more robust and
  with better error reporting.


Release 2.3, 2014-05-05
=======================
	
Language features:
- Support for C99 designated initializers. (ISO C99 section 6.7.8.)

Improvements in confidence:
- The parser is now formally verified against the ISO C99 grammar plus
  CompCert's extensions.  The verification proves that the parser
  recognizes exactly the language specified by the grammar, and that
  the grammar has no ambiguities.  For more details, see the paper
  "Validating LR(1) parsers" by Jacques-Henri Jourdan, François Pottier,
  and Xavier Leroy, ESOP 2012, http://dx.doi.org/10.1007/978-3-642-28869-2_20
- More theorems proved about float<->integer conversions.

Optimizations:
- Optimize "x != 0", "x == 0", "x != 1", and "x == 1" when x is known
  to be a boolean already, ranging over {0, 1, undef}.