@@ -28,7 +28,7 @@ let builtins = {
       (TInt(IInt, []), [TInt(IInt, []); TInt(IInt, [])], false);
     "__builtin_mulhwu",
       (TInt(IUInt, []), [TInt(IUInt, []); TInt(IUInt, [])], false);
-    "__builtin_cntlz",
+    "__builtin_clz",
       (TInt(IUInt, []), [TInt(IUInt, [])], false);
     "__builtin_bswap",
       (TInt(IUInt, []), [TInt(IUInt, [])], false);
