@@ -1,5 +1,7 @@
 bswap(12345678) = 78563412
 bswap16(1234) = 3412
+clz(12345678) = 3
+ctz(1234) = 2
 fsqrt(3.141590) = 1.772453
 fmin(3.141590, 2.718000) = 2.718000
 fmax(3.141590, 2.718000) = 3.141590
