@@ -34,6 +34,12 @@
 
 - Language features: support C99 compound literals.
 
+- Built-in function '__builtin_cntlz' (count leading zeros)
+  renamed '__builtin_clz' for GCC / Clang compatibility.
+
+- IA32: added built-in functions __builtin_clz and __builtin_ctz
+  (count leading / trailing zeros).
+
 
 Release 2.3pl2, 2014-05-15
 ==========================
